<resources>
    <string name="app_name">qBittorrent Remote</string>

    <string name="title_config_fragment">Configure Server</string>
    <string name="title_log_fragment">Logs</string>
    <string name="title_settings_fragment">Settings</string>

    <string name="label_cancel">Cancel</string>

    <string name="main_drawer_group">Status</string>
    <string name="main_drawer_item_filter_all">All</string>
    <string name="main_drawer_item_filter_downloading">Downloading</string>
    <string name="main_drawer_item_filter_completed">Completed</string>
    <string name="main_drawer_item_filter_paused">Paused</string>
    <string name="main_drawer_item_filter_active">Active</string>
    <string name="main_drawer_item_filter_inactive">Inactive</string>
    <string name="main_drawer_item_log">Log</string>
    <string name="main_drawer_item_settings">Settings</string>

    <string name="menu_selection_select_all">Select All</string>
    <string name="menu_selection_select_inverse">Select Inverse</string>

    <string name="hint_host">Host</string>
    <string name="hint_port">Port</string>
    <string name="hint_use_https">Use HTTPS</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_lets_go">Let\'s go</string>

    <string name="state_error">Error</string>
    <string name="state_paused_up">Paused(UP)</string>
    <string name="state_paused">Paused</string>
    <string name="state_queued_up">Queued(UP)</string>
    <string name="state_queued_dl">Queued(DL)</string>
    <string name="state_seeding">Seeding</string>
    <string name="state_stalled_up">Stalled(UP)</string>
    <string name="state_checking">Checking</string>
    <string name="state_downloading">Downloading</string>
    <string name="state_stalled_dl">Stalled(DL)</string>
    <string name="state_fetching_metadata">Fetching metadata</string>

    <string name="log_type_normal">Normal</string>
    <string name="log_type_info">Info</string>
    <string name="log_type_warning">Warning</string>
    <string name="log_type_critical">Critical</string>

    <string name="torrentlist_menu_label_sort">Sort</string>
    <string name="torrentlist_menu_label_name">Name</string>
    <string name="torrentlist_menu_label_size">Size</string>
    <string name="torrentlist_menu_label_eta">ETA</string>
    <string name="torrentlist_menu_label_priority">Priority</string>
    <string name="torrentlist_menu_label_progress">Progress</string>
    <string name="torrentlist_menu_label_ratio">Ratio</string>
    <string name="torrentlist_menu_label_state">State</string>
    <string name="torrentlist_menu_label_download_speed">Download Speed</string>
    <string name="torrentlist_menu_label_upload_speed">Upload Speed</string>
    <string name="torrentlist_menu_label_reverse">Reverse</string>
    <string name="torrentlist_menu_label_pause_all">Pause All</string>
    <string name="torrentlist_menu_label_resume_all">Resume All</string>
    <string name="torrentlist_menu_label_add">Add</string>
    <string name="torrentlist_menu_label_link">Link</string>
    <string name="torrentlist_menu_label_file">File</string>
    <string name="torrentlist_menu_label_folder">Folder</string>

    <string name="torrentlist_selection_pause">Pause</string>
    <string name="torrentlist_selection_resume">Resume</string>
    <string name="torrentlist_selection_recheck">Recheck</string>
    <string name="torrentlist_selection_delete">Delete</string>

    <string name="torrentlist_dialog_label_add_link">Add link</string>
    <string name="torrentlist_dialog_label_are_you_sure">Are you sure?</string>
    <string name="torrentlist_dialog_label_delete_with_data">Delete with data</string>

    <string name="log_menu_label_sort">Sort</string>
    <string name="log_menu_label_latest">Latest</string>
    <string name="log_menu_label_oldest">Oldest</string>
    <string name="log_menu_label_filter">Filter</string>

    <string name="permission_label_settings">Settings</string>

    <string name="error_generic">Operation Failed</string>
    <string name="error_need_read_storage_permission">Need Storage permission to add files</string>
</resources>
