<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="10"
        android:title="@string/log_menu_label_sort"
        app:showAsAction="ifRoom">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/item_sort_latest"
                    android:checked="true"
                    android:title="@string/log_menu_label_latest" />
                <item
                    android:id="@+id/item_sort_oldest"
                    android:title="@string/log_menu_label_oldest" />

            </group>

        </menu>

    </item>

</menu>